# tedu-ml

./: .gitignore  pyproject.toml
01_numpy/: 01_ndarray.py  02_ndarray_attr.py  03_dates.py  04_custom_type.py  05_shape.py  06_slice.py  07_mask.py  08_stack_split.py  exercise_mask.py  exercise_slice.py
02_pandas/: 01_Series.py  02_Series_access.py  03_dataframe.py  04_dataframe_attr.py  05_columns_crud.py  06_rows_access.py  07_dataframe_drop.py  07_read_csv.py  07_row_add.py  08_read_json.py  09_math_mean.py  10_math_average.py  11_math_max_min.py  12_math_maximum.py  13_math_median.py  14_math_std.py  exercise.py
03_matplotlib/: 01_basic_line.py  02_line_setting.py  03_figure.py  04_subplot.py  05_gridspec.py  06_scatter.py  07_bar.py  08_hist.py  exercise_year_salary.py
04_data_preprocess/: 01_scale.py  02_min_max_scale.py  03_normalization.py  04_binarizer.py  05_oneHotEncoder.py  06_LabelEncoder.py
06_classification_model/: car_RF_GridSearch.py  car_RF_classification.py  car_RF_learning_curve.py  car_RF_valition_curve.py  iris_logistic_regression_cross_validation.py  iris_logistic_regression_multi.py  iris_logistic_regression_two.py  naive_bayes.py  sigmoid.py  svm_gridSearch.py  svm_linear.py  svm_poly.py  svm_rbf.py
07_cluster/: Agg.py  DBSCAN.py  k-means.py  silhouette_score.py
08_opencv/: add.py  add_test.py  approxPolyDP.py  bgr2gray.py  binary.py  blur.py  blur_custom_kernel.py  boundingRect.py  cat_test.py  channel_operation.py  color_equalizeHist.py  color_pick_inRange.py  cpu_exercise.py  cpu_exercise_2.py  crop.py  dilate.py  edge_detection.py  (+15 more)
(+1129 files in other folders)
