[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Robin.Wang", email = "3Jg$94sbQ@q1"},
]
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "matplotlib>=3.7.3",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "opencv-python>=4.8.1.78",
    "opencv-contrib-python>=4.8.1.78",
    "tensorflow>=2.15.0",
]
requires-python = ">=3.9,<3.11"
readme = "README.md"
license = {text = "MIT"}

